// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow alternative import of useStaticQuery 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
import * as Gatsby from 'gatsby';
export default (() => {
  const query = \\"426988268\\";
  const siteTitle = staticQueryData.data;
  return /*#__PURE__*/React.createElement(\\"h1\\", null, siteTitle.site.siteMetadata.title);
});"
`;

exports[`Doesn't add data import for non static queries 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
import { StaticQuery } from \\"gatsby\\";

const Test = () => /*#__PURE__*/React.createElement(StaticQuery, {
  query: \\"426988268\\",
  render: data => /*#__PURE__*/React.createElement(\\"div\\", null, data.site.siteMetadata.title),
  data: staticQueryData
});

export default Test;
const fragment = \\"4176178832\\";"
`;

exports[`Handles closing StaticQuery tag 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
import { StaticQuery } from 'gatsby';
export default (() => /*#__PURE__*/React.createElement(StaticQuery, {
  query: \\"426988268\\",
  data: staticQueryData
}, data => /*#__PURE__*/React.createElement(\\"div\\", null, data.site.siteMetadata.title)));"
`;

exports[`Leaves other graphql tags alone 1`] = `
"import * as React from 'react';
import { graphql } from 'relay';
export default (() => /*#__PURE__*/React.createElement(\\"div\\", null, data.site.siteMetadata.title));
export const query = graphql\`
     {
       site { siteMetadata { title }}
     }
  \`;"
`;

exports[`Only runs transforms if useStaticQuery is imported from gatsby 1`] = `
"import * as React from 'react';
export default (() => {
  const query = \\"426988268\\";
  const siteTitle = useStaticQuery(query);
  return /*#__PURE__*/React.createElement(\\"h1\\", null, siteTitle.site.siteMetadata.title);
});"
`;

exports[`Removes all gatsby queries 1`] = `
"export default (() => /*#__PURE__*/React.createElement(\\"div\\", null, data.site.siteMetadata.title));
const siteMetaQuery = \\"504726680\\";
const query = \\"3211238532\\";"
`;

exports[`Transformation does not break custom hooks 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import React from \\"react\\";

const useSiteMetadata = () => {
  const data = staticQueryData.data;
  return data.site.siteMetadata;
};

export default (() => {
  const siteMetadata = useSiteMetadata();
  return /*#__PURE__*/React.createElement(\\"h1\\", null, site.siteMetadata.title);
});"
`;

exports[`Transforms exported queries in useStaticQuery 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
export default (() => {
  const data = staticQueryData.data;
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, data.site.siteMetadata.title), /*#__PURE__*/React.createElement(\\"p\\", null, data.site.siteMetadata.description));
});
export const query = \\"426988268\\";"
`;

exports[`Transforms only the call expression in useStaticQuery 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import React from \\"react\\";

const useSiteMetadata = () => {
  return staticQueryData.data.site.siteMetadata;
};

export default (() => {
  const siteMetadata = useSiteMetadata();
  return /*#__PURE__*/React.createElement(\\"h1\\", null, siteMetadata.title);
});"
`;

exports[`Transforms queries and preserves destructuring in useStaticQuery 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
export default (() => {
  const query = \\"426988268\\";
  const {
    site
  } = staticQueryData.data;
  return /*#__PURE__*/React.createElement(\\"h1\\", null, site.siteMetadata.title);
});"
`;

exports[`Transforms queries and preserves variable type in useStaticQuery 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
export default (() => {
  const query = \\"426988268\\";
  let {
    site
  } = staticQueryData.data;
  return /*#__PURE__*/React.createElement(\\"h1\\", null, site.siteMetadata.title);
});"
`;

exports[`Transforms queries defined in own variable in <StaticQuery> 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
import { StaticQuery } from 'gatsby';
const query = \\"426988268\\";
export default (() => /*#__PURE__*/React.createElement(StaticQuery, {
  query: query,
  render: data => /*#__PURE__*/React.createElement(\\"div\\", null, data.site.siteMetadata.title),
  data: staticQueryData
}));"
`;

exports[`Transforms queries defined in own variable in useStaticQuery 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
export default (() => {
  const query = \\"426988268\\";
  const siteTitle = staticQueryData.data;
  return /*#__PURE__*/React.createElement(\\"h1\\", null, siteTitle.site.siteMetadata.title);
});"
`;

exports[`Transforms queries in <StaticQuery> 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
import { StaticQuery } from 'gatsby';
export default (() => /*#__PURE__*/React.createElement(StaticQuery, {
  query: \\"426988268\\",
  render: data => /*#__PURE__*/React.createElement(\\"div\\", null, data.site.siteMetadata.title),
  data: staticQueryData
}));"
`;

exports[`Transforms queries in page components 1`] = `"const query = \\"426988268\\";"`;

exports[`Transforms queries in useStaticQuery 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
export default (() => {
  const siteTitle = staticQueryData.data;
  return /*#__PURE__*/React.createElement(\\"h1\\", null, siteTitle.site.siteMetadata.title);
});"
`;

exports[`allows the global tag 1`] = `"const query = \\"426988268\\";"`;

exports[`distinguishes between the right tags 1`] = `
"const foo = styled('div')\`
     {
       \${foo}
     }
  \`;
const pulse = keyframes\`
    0% {
      transform: scale(1);
      animation-timing-function: ease-in;
    }
    25% {
      animation-timing-function: ease-out;
      transform: scale(1.05);
    }
    50% {
      transform: scale(1.12);
      animation-timing-function: ease-in;
    }
    to {
      transform: scale(1);
      animation-timing-function: ease-out;
    }
  \`;
const query = \\"426988268\\";"
`;

exports[`handles import aliasing 1`] = `"const query = \\"426988268\\";"`;

exports[`handles require 1`] = `"const query = \\"426988268\\";"`;

exports[`handles require alias 1`] = `"const query = \\"426988268\\";"`;

exports[`handles require namespace 1`] = `"const query = \\"426988268\\";"`;

exports[`transforms exported variable queries in <StaticQuery> 1`] = `
"import staticQueryData from \\"public/static/d/426988268.json\\";
import * as React from 'react';
import { StaticQuery } from 'gatsby';
export const query = \\"426988268\\";
export default (() => /*#__PURE__*/React.createElement(StaticQuery, {
  query: query,
  render: data => /*#__PURE__*/React.createElement(\\"div\\", null, data.site.siteMetadata.title),
  data: staticQueryData
}));"
`;
